# sims4filter

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: release.yaml
scripts/sims4filter/: s4f_base_classes.py  s4f_filter.py  s4f_logic.py  s4f_postfix_parser.py  s4f_utils.py
